# compound-agent

./: .gitattributes  .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  context7.json  eslint.config.js  infinity-loop.sh  llms.txt  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.workspace.ts
.beads/: .beads-credential-key  dolt  dolt-old-sqlite.bak  dolt-server.activity  issues.jsonl  loop-session-name  metadata.json
.claude/: CLAUDE.md  compound-agent.json
.github/: dependabot.yml
doc/: ARCHITECTURE-V2.md  CONTEXT.md  LANDSCAPE.md  PLAN.md  README.md  RESOURCE_LIFECYCLE.md  SPEC.md  property-tests-install-check.md  test-optimization-baseline.md
docs/: ARCHITECTURE-V2.md  HOW_TO_NEXT_IMPROVE.md  INDEX.md  LANDSCAPE.md  MIGRATION.md  README.md  RESOURCE_LIFECYCLE.md  property-tests-install-check.md  review_infinity_loop.md  test-optimization-baseline.md
examples/: basic-usage.ts  cli-usage.md  quality-filtering.ts  tsconfig.json
go/: .golangci.yml  Makefile  go.mod  go.sum  test.db-shm  test.db-wal  test_defer2.go  v3-pipeline.sh
npm-dist/: package.json
rust/embed-daemon/: Cargo.toml
rust/embed-daemon/src/: main.rs
scripts/: changelog-utils.ts  check-model-info-rss.mjs  extract-changelog.test.ts  extract-changelog.ts  postinstall-binary.test.ts  postinstall.cjs  postinstall.mjs  postinstall.test.mjs  publish-platforms.cjs
spike/: .gitignore
src/: changelog-data.ts  cli-app.ts  cli-error-format.test.ts  cli-error-format.ts  cli.ts  (+29 more)
(+857 files in other folders)
